--- a/src/components/Common/Header/styles.module.css
+++ b/src/components/Common/Header/styles.module.css
@@ -5,3 +5,24 @@
   top: 0;
   left: 0;
 }
+.menu_icon {
+  color: var(--grey);
+  transition: all 0.3s;
+}
+
+.menu_icon:hover {
+  color: var(--white);
+}
+
+.navigation__items {
+  height: 100%;
+  width: 40vw;
+  padding-block-start: 2rem;
+  padding-inline: 0.5rem 1.5rem;
+  font-weight: var(--fw-semiBold);
+  color: var(--grey);
+  background-color: var(--black);
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+}
