--- a/src/components/Common/Header/styles.module.css
+++ b/src/components/Common/Header/styles.module.css
@@ -26,3 +26,9 @@
   flex-direction: column;
   gap: 1.2rem;
 }
+
+@media screen and (min-width: 48em) {
+  .navigation__items {
+    display: none;
+  }
+}
