--- a/src/components/LandingPage/MainComponent/styles.module.css
+++ b/src/components/LandingPage/MainComponent/styles.module.css
@@ -36,8 +36,14 @@
     font-size: 4rem;
   }
 }
+@media screen and (min-width: 69.375em) {
+  .hero_info_title,
+  .hero_info_title_2 {
+    font-size: 5.5rem;
+  }
+}
 
-@media screen and (min-width: 81.25em) {
+@media screen and (min-width: 84.75em) {
   .hero_info_title,
   .hero_info_title_2 {
     font-size: 6.5rem;
